test/soya/error/type/f_call.soy
function int f(int x, int y) {
  return x + y;
}

function void main() {
  f(1, 2, 3);
}
